--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,24 @@
             "role": "Developer"
         }
     ],
+    "minimum-stability": "dev",
     "require": {
 		"php": ">=7.1"
     },
-    "minimum-stability": "stable",
+    "require-dev": {
+        "phpunit/phpunit": "^5.7"
+    },
     "autoload": {
         "psr-4": {
             "JVconseil\\DkimPhpMailSignature\\": "src/"
         }
+    },
+    "support": {
+        "issues": "https://github.com/JV-conseil-Internet-Consulting/dkim-php-mail-signature/issues",
+        "docs": "https://jv-conseil-internet-consulting.github.io/dkim-php-mail-signature/classes/JVconseil.DkimPhpMailSignature.DKIMconfig.html",
+        "wiki": "https://github.com/JV-conseil-Internet-Consulting/dkim-php-mail-signature/wiki"
+    },
+    "scripts": {
+        "test": "php examples/ClassMethod.php"
     }
 }
