--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
 		"php": ">=7.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7"
+        "phpdocumentor/phpdocumentor": "2.*"
     },
     "autoload": {
         "psr-4": {
