--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "jv-conseil/dkim-php-mail-signature",
     "description": "Stand-alone DKIM class to sign your emails with a 2048 bit private key hashed with SHA-256 algorithm.",
-    "keywords": ["dkim", "dkim-signature", "mail", "composer"],
+    "keywords": ["dkim", "dkim-signature", "dmarc", "dmarc-record", "spf", "spf-record", "composer", "packagist", "php"],
     "type": "library",
     "homepage": "http://www.jv-conseil.net",
     "license": "BSD-3-Clause",
