--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,9 @@
     "require": {
 		"php": ">=7.1"
     },
+    "require-dev": {
+        "phpdocumentor/phpdocumentor": "2.*"
+    },
     "autoload": {
         "psr-4": {
             "JVconseil\\DkimPhpMailSignature\\": "src/"
