--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,6 +5,7 @@
     "yzhang.markdown-all-in-one",
     "davidanson.vscode-markdownlint",
     "foxundermoon.shell-format",
-    "bierner.markdown-emoji"
+    "bierner.markdown-emoji",
+    "devsense.phptools-vscode",
   ]
 }
